--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!-- KidSense - Coming Soon Web Page -->
-<!-- Copyright, Kidesene 2022 -->
+<!-- Chain-FS - Coming Soon Web Page -->
+<!-- Copyright, Nansen 2022 -->
 <!-- Author: A.Collins -->
 
 <!DOCTYPE html>
