--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="container">
         <div class="coming_soon">
           <div class="wrapper">
-            <img class=main_image src="images/ChainFS Logo - Transparent Small.png" alt="KidSense Logo">
+            <img class=main_image src="images/ChainFS Logo - Transparent Small.png" width="100 alt="Chain-FS Logo">
             <div class="header">
               <p class="sm_text">THE WORLD’S FIRST SECURE CRITICAL FILE STORE</p>,<br /><br />
               <div class="main_text">Coming Soon</div><br />
