--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-ght="auto"<!-- Chain-FS - Coming Soon Web Page -->
+<!-- Chain-FS - Coming Soon Web Page -->
 <!-- Copyright, Nansen 2023 -->
 <!-- Author: A.Collins -->
 
